product basic setup and active admin integrated
